# Achadinhos

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
scripts/: test.sh
tests/: test_health.py
